--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
               </div>
         </fieldset>
     </form>
-
+<div style="display: flex; align-items: center;">
     <h2>Top brands for you</h2>
-    <a href=""><img src="burgerking" alt="loading" width="200" height="100"></a>
-    <a href=""><img src="kfc.png" alt="loading" width="200" height="100"></a>
-    <a href=""><img src="don.png" alt="loading" width="200" height="100"></a>
-    <a href=""><img src="domino.png" alt="loading" width="200" height="100"></a>
-    <a href=""><img src="emp.png" alt="loading" width="200" height="100"></a>
-    <a href=""><img src="maggggg.png" alt="loading" width="200" height="100"></a>
+    <span><a href=""><img src="burgerking" alt="loading" width="200" height="100"></a> </span>
+    <span><a href=""><img src="kfc.png" alt="loading" width="200" height="100"></a> </span>
+    <span><a href=""><img src="don.png" alt="loading" width="200" height="100"></a> </span>
+    <span><a href=""><img src="domino.png" alt="loading" width="200" height="100"></a> </span>
+    <span><a href=""><img src="emp.png" alt="loading" width="200" height="100"></a> </span>
+    <span><a href=""><img src="maggggg.png" alt="loading" width="200" height="100"></a> </span>
+</div>
 
     <h2>Food Delivery Restaurants in Bengaluru</h2>
      <div style="display: flex;align-items: center;">
