--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
             color: black;
             text-decoration: none;
         }
+        ul{
+            list-style: none;
+        }
+        li{
+            color: black;
+            float: left;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -20,7 +28,13 @@
         <a href="https://www.zomato.com/login" style="margin-right: 10px;">login</a>
         <a href="https://www.zomato.com/login">signup</a>
     </div>
-    <p> <a class="a1" href="https://www.zomato.com/">Home</a>/ <a class="a1" href="https://www.zomato.com/india">India</a> / Bengaluru Resturent</p>
+    <div>
+        <ul>
+            <li><a=herd=>Home</li>
+            <li><a=herd=>/Page</li>
+            <li><a=herd=>/Bengaluru Resturent</li>
+            
+        </ul>
 
     <div style="display: flex; align-items: center;">
         <img src="ffffff.webp" alt="loading" width="200" height="100" style="margin-right: 20px;">&nbsp;&nbsp;&nbsp;
