--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </div>
     <div>
         <ul>
-            <li><a=herd=>Home</li>
-            <li><a=herd=>/Page</li>
-            <li><a=herd=>/Bengaluru Resturent</li>
+            <li><a=herf="https://www.zomato.com/">Home </li>
+            <li><a=herf="https://www.zomato.com/">/Page </li>
+            <li><a=herf="#">/Bengaluru Resturent</li>
             
         </ul>
 
