--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <a href="https://www.zomato.com/login">signup</a>
     </div>
         <ul>
-            <li><a=herf="https://www.zomato.com/">Home </li>
-            <li><a=herf="https://www.zomato.com/">/Page </li>
-            <li><a=herf="#">/Bengaluru Resturent</li>
+            <li><a herf="https://www.zomato.com/">Home </li>
+            <li><a herf="https://www.zomato.com/">/Page </li>
+            <li><a herf="#">/Bengaluru Resturent</li>
         </ul>
 
     <div style="display: flex; align-items: center;">
