--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         &nbsp;&nbsp;&nbsp;&nbsp;<h1 style="margin-right: 20px;">ZOMATO</h1>
         <span style="margin-right: 20PX;">bengaluru</span>
         <input type="text" placeholder="search for location and dish" style="width: 300px;" style="margin-right: 20px;;">
-        <a href="https://www.zomato.com/login" style="margin-right: 10px;" color=black:>login</a>
+        <a href="https://www.zomato.com/login" style="margin-right: 10px;" color=black;>login</a>
         <a href="https://www.zomato.com/login" style="color: black;">signup</a>
     </div>
         <ul>
-            <li><a herf="https://www.zomato.com/">Home</li>
-            <li><a herf="https://www.zomato.com/">/Page</li>
-            <li><a herf="#">/Bengaluru Resturent</li>
+            <li><a herf="https:https://www.zomato.com/">Home </a> </li>
+            <li><a herf="https:https://www.zomato.com/">/Page</a> </li>
+            <li><p> Bengaluru Resturent</p></a> </li>
         </ul>
 
     <div style="display: flex; align-items: center;">
