--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             float: left;
             text-decoration: none;
         }
+         a{
+            color: #000;
+        }
     </style>
 </head>
 <body>
@@ -26,14 +29,13 @@
         <span style="margin-right: 20PX;">bengaluru</span>
         <input type="text" placeholder="search for location and dish" style="width: 300px;" style="margin-right: 20px;;">
         <a href="https://www.zomato.com/login" style="margin-right: 10px;" color=black;>login</a>
-        <a href="https://www.zomato.com/login" style="color: black;">signup</a>
+        <a href="https://www.zomato.com/login">signup</a>
     </div>
-        <ul>
-            <li><a herf="https:https://www.zomato.com/">Home </a> </li>
-            <li><a herf="https:https://www.zomato.com/">/Page</a> </li>
-            <li><p> Bengaluru Resturent</p></a> </li>
+         <ul>
+        <li><a href="https://www.zomato.com/">home</a></li>
+        <li><a href="https://www.zomato.com/">page</a></li>
+        <li>bengauru resturent</li>
         </ul>
-
     <div style="display: flex; align-items: center;">
         <img src="ffffff.webp" alt="loading" width="200" height="100" style="margin-right: 20px;">&nbsp;&nbsp;&nbsp;
         <span><h4>Dining out</h4></span>
