--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         }
          a{
             color: #000;
+             text-decoration: none;
         }
     </style>
 </head>
@@ -33,8 +34,8 @@
     </div>
          <ul>
         <li><a href="https://www.zomato.com/">home</a></li>
-        <li><a href="https://www.zomato.com/">page</a></li>
-        <li>bengauru resturent</li>
+        <li><a href="https://www.zomato.com/">/page</a></li>
+        <li>/bengauru resturent</li>
         </ul>
     <div style="display: flex; align-items: center;">
         <img src="ffffff.webp" alt="loading" width="200" height="100" style="margin-right: 20px;">&nbsp;&nbsp;&nbsp;
